# figtracer

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ABUNDANCE_INTERP.md  ANALYSIS_DOCTOR.md  FULL_SYSTEM.md  GETTING_STARTED.md  MERGE_CANVAS.md  PROTOCOLS.md
examples/cytof/: DATASETS.md  README.md  hiv_scanpy.py  mpn_seekit.qmd
examples/cytof/vault/: CyTOF cross-language example.md
examples/cytof/vault/.obsidian/: workspace.json
examples/minimal/: Lab note.md  README.md  analysis.py
examples/minimal/example-output/: MANIFEST.jsonl
figtools/: __init__.py  assemble.py  check.py  cli.py  clips.py  doctor.py  embed.py  executables.py  idns.py  inspect_cmd.py  journals.py  links.py  manifest.py  normalize.py  optimise.py  register.py  render.py  style.py  svgdoc.py  units.py  verify.py  watch.py  whites.py
figtools/config/: journals.yaml
figtracer/: __init__.py  analysis_doctor.py  bundle.py  canvas.py  cli.py  data.py  demo.py  export.py  figsync.py  hashing.py  objects.py  protocol.py  savefig.py  sync.py
figtracer/resources/: __init__.py  figtracer.R
hooks/: README.md  pre-push
labkit/: __init__.py  cli.py  config.py  index_cmd.py  ingest.py  init_cmd.py  scaffold.py
labkit/config/: projects.example.yaml
labkit/templates/: methods_benchmark.md  wetlab_experiment.md
tests/: test_analysis_doctor.py  test_bundle.py  test_config.py  test_data.py  test_demo.py  test_doctor.py  test_export.py  test_figure_loop_integration.py  test_figure_safety.py  test_hashing.py  test_index.py  test_manifest_link_roundtrip.py  test_objects.py  test_packaging.py  test_register.py  test_render.py  test_savefig.py  test_scaffold.py  test_sync.py  test_units.py
